[package]
name = "figrid-board"
version = "0.3.0"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
A library for the Five-in-a-Row (Gomoku) game.
"""

keywords = ["game", "board", "gomoku"]
categories = ["data-structures", "game-development"]

[dependencies]

[lib]
name = "figrid_board"
path = "lib.rs"

[[bin]]
name = "figrid-board"
path = "main.rs"
