[package]
name = "figrid-board"
version = "0.3.1"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuwbobo2021/figrid-board"
readme = "README.md"
description = """
A library for the Five-in-a-Row (Gomoku) game.
"""

keywords = ["game", "board", "gomoku"]
categories = ["data-structures", "game-development"]

[dependencies]

[lib]
name = "figrid_board"
path = "lib.rs"

[[bin]]
name = "pbrain-figrid"
path = "main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"
